--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <title>Chess Tournament Director Resource Guide</title>
+        <link rel="stylesheet" href="chess.css">
     </head>
     <body>
-    <h1>Tournament Director Resources</h1> 
-    <ul>
+    <h1 class="navBar">Tournament Director Resources</h1> 
+    <ul class="navBar">
         <li><a href="index.html">Home</a></li>
         <li><a href="roundrobin.html">Round Robin Pairing</a></li>
         <li><a href="tdlinks.html">Tournament Director Links</a></li>
     </ul>
     
     <img src="https://www.clipartmax.com/png/middle/42-427425_bishop-chess-game-king-knight-pawn-pieces-chess-pieces-png.png" width="300">
-    <h2>Upcoming Tournaments</h2>
+    <h2 class="head">Upcoming Tournaments</h2>
     <ul>
         <li>NM K-12 Championship</li>
         <li>NM Senior Open</li>
@@ -20,7 +21,7 @@
     </ul>
 
 
-    <h3>Available Tournament Directors</h3>
+    <h3 class="head">Available Tournament Directors</h3>
     <table>
         <tr>
             <th>Name</th>
