--- a/roundrobin.html
+++ b/roundrobin.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Chess Tournament Director Resource Guide</title>
+        <link rel="stylesheet" href="chess.css">
     </head>
     <body>
-    <h1>Round Robin Pairings</h1> 
-    <ul>
+    <h1 class="navBar">Round Robin Pairings</h1> 
+    <ul class="navBar">
         <li><a href="index.html">Home</a></li>
         <li><a href="roundrobin.html">Round Robin Pairing</a></li>
         <li><a href="tdlinks.html">Tournament Director Links</a></li>
