--- a/tdlinks.html
+++ b/tdlinks.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Chess Tournament Director Resource Guide</title>
+        <link rel="stylesheet" href="chess.css">
     </head>
     <body>
-    <h1>Important Links</h1> 
-    <ul>
+    <h1 class="navBar">Important Links</h1> 
+    <ul class="navBar">
         <li><a href="index.html">Home</a></li>
         <li><a href="roundrobin.html">Round Robin Pairing</a></li>
         <li><a href="tdlinks.html">Tournament Director Links</a></li>
@@ -13,7 +14,7 @@
 
     <img src="https://static.wixstatic.com/media/f42b9a_28071e330e6b498d88f1f46619fd4317~mv2.png/v1/fill/w_402,h_395,fp_0.50_0.50,lg_1,enc_auto/f42b9a_28071e330e6b498d88f1f46619fd4317~mv2.png" width="200">
     
-    <h2>Join our Tournament Director Network</h2>
+    <h2 class="head">Join our Tournament Director Network</h2>
     <form>
         <label for="name">Name:</label><br>
         <input type="text" id="name" placeholder="First Last"><br>
